[package]
name = "hello-roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = ["bevy/dynamic"]

[dependencies]
bevy = "0.9"
bevy-inspector-egui = "0.18.0"
bevy_ascii_terminal = "0.12.3"
bracket-bevy = { git = "https://github.com/amethyst/bracket-lib", rev = "0d2d5e6" }
bracket-pathfinding = "~0.8"
iyes_loopless = "0.9.1"
ron = "0.8.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
